--- a/p2-3-modules.ipynb
+++ b/p2-3-modules.ipynb
@@ -45,30 +45,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from math import sqrt\n",
-    "\n",
     "def is_prime(n):\n",
-    "    if n < 2:\n",
+    "    \"\"\"Return bool value if it's a prime number. Prime number is geater than 1 that is not a product of 2 smaller natural number.\"\"\"\n",
+    "    if n <= 1:\n",
     "        return False\n",
-    "    \n",
-    "    if n in [2, 3]:\n",
+    "        \n",
+    "    if n in (2, 3):\n",
     "        return True\n",
-    "    \n",
-    "    for i in range(2, int(sqrt(n))+1):\n",
+    "        \n",
+    "    for i in range(2, n):\n",
     "        if n % i == 0:\n",
     "            return False\n",
     "        \n",
     "    return True\n",
     "\n",
-    "def say_hi(*names, greeting = \"Hi\", capitalized= False):\n",
-    "    \"\"\"Print a string, with a greeting to everyone.\n",
+    "def say_hi(*names, greeting = \"Hi\", capitalized = False):\n",
+    "    \"\"\"\n",
+    "    Print a string that say greeting to everyone\n",
     "    :param *names: tuple of names to be greeted.\n",
-    "    :param greeting: \"Hi\" as default\n",
-    "    :param capitalized: Whether name should be converted to capitalized before print. False as default.\n",
+    "    :param greeting: 'Hi' as default\n",
+    "    :param capitalized: whether name should be converted to capitalized form before print. False as default.\n",
     "    :returns: None\n",
     "    \"\"\"\n",
     "    for name in names:\n",
@@ -93,31 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['C:\\\\Users\\\\Administrator\\\\Code\\\\pilot-student',\n",
-       " 'c:\\\\users\\\\administrator\\\\scoop\\\\apps\\\\python37\\\\current\\\\python37.zip',\n",
-       " 'c:\\\\users\\\\administrator\\\\scoop\\\\apps\\\\python37\\\\current\\\\DLLs',\n",
-       " 'c:\\\\users\\\\administrator\\\\scoop\\\\apps\\\\python37\\\\current\\\\lib',\n",
-       " 'c:\\\\users\\\\administrator\\\\scoop\\\\apps\\\\python37\\\\current',\n",
-       " '',\n",
-       " 'c:\\\\users\\\\administrator\\\\scoop\\\\apps\\\\python37\\\\current\\\\lib\\\\site-packages',\n",
-       " 'c:\\\\users\\\\administrator\\\\scoop\\\\apps\\\\python37\\\\current\\\\lib\\\\site-packages\\\\win32',\n",
-       " 'c:\\\\users\\\\administrator\\\\scoop\\\\apps\\\\python37\\\\current\\\\lib\\\\site-packages\\\\win32\\\\lib',\n",
-       " 'c:\\\\users\\\\administrator\\\\scoop\\\\apps\\\\python37\\\\current\\\\lib\\\\site-packages\\\\Pythonwin',\n",
-       " 'c:\\\\users\\\\administrator\\\\scoop\\\\apps\\\\python37\\\\current\\\\lib\\\\site-packages\\\\IPython\\\\extensions',\n",
-       " 'C:\\\\Users\\\\Administrator\\\\.ipython']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path"
@@ -141,11 +119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.append(\"./pilot-student/\")"
+    "sys.path.append(\"./assets/\")"
    ]
   },
   {
@@ -157,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -165,18 +143,18 @@
      "output_type": "stream",
      "text": [
       "Hi, Neo!\n",
-      "Hi, Mary!\n"
+      "Hi, Rose!\n"
      ]
     }
    ],
    "source": [
     "import myutil\n",
-    "myutil.say_hi(\"Neo\", \"Mary\")"
+    "myutil.say_hi(\"Neo\", \"Rose\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -185,14 +163,14 @@
        "False"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from myutil import is_prime\n",
-    "is_prime(84)"
+    "is_prime(42)"
    ]
   },
   {
@@ -314,7 +292,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, Neo!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import myutil as abc\n",
+    "abc.say_hi(\"Neo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -323,35 +319,14 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from myutil import is_prime as isp\n",
-    "isp(31)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import myutil as m\n",
-    "m.is_prime(78)"
+    "from myutil import is_prime as p\n",
+    "p(2)"
    ]
   },
   {
@@ -370,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +418,7 @@
        " 'zlib')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -578,8 +553,8 @@
     "d = {}\n",
     "for c in (65, 97):\n",
     "    for i in range(26):\n",
-    "        d[chr(i+c)] = chr((i + 13) % 26 + c)\n",
-    "        \n",
+    "        d[chr(i+c)] = chr((i+13) % 26 + c)\n",
+    "\n",
     "print(\"\".join([d.get(c, c) for c in s]))"
    ]
   },
@@ -606,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +600,7 @@
        " 'sqrt']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +627,7 @@
        "'myutil'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,186 +638,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'__name__': 'builtins',\n",
-       " '__doc__': \"Built-in functions, exceptions, and other objects.\\n\\nNoteworthy: None is the `nil' object; Ellipsis represents `...' in slices.\",\n",
-       " '__package__': '',\n",
-       " '__loader__': _frozen_importlib.BuiltinImporter,\n",
-       " '__spec__': ModuleSpec(name='builtins', loader=<class '_frozen_importlib.BuiltinImporter'>),\n",
-       " '__build_class__': <function __build_class__>,\n",
-       " '__import__': <function __import__>,\n",
-       " 'abs': <function abs(x, /)>,\n",
-       " 'all': <function all(iterable, /)>,\n",
-       " 'any': <function any(iterable, /)>,\n",
-       " 'ascii': <function ascii(obj, /)>,\n",
-       " 'bin': <function bin(number, /)>,\n",
-       " 'breakpoint': <function breakpoint>,\n",
-       " 'callable': <function callable(obj, /)>,\n",
-       " 'chr': <function chr(i, /)>,\n",
-       " 'compile': <function compile(source, filename, mode, flags=0, dont_inherit=False, optimize=-1)>,\n",
-       " 'delattr': <function delattr(obj, name, /)>,\n",
-       " 'dir': <function dir>,\n",
-       " 'divmod': <function divmod(x, y, /)>,\n",
-       " 'eval': <function eval(source, globals=None, locals=None, /)>,\n",
-       " 'exec': <function exec(source, globals=None, locals=None, /)>,\n",
-       " 'format': <function format(value, format_spec='', /)>,\n",
-       " 'getattr': <function getattr>,\n",
-       " 'globals': <function globals()>,\n",
-       " 'hasattr': <function hasattr(obj, name, /)>,\n",
-       " 'hash': <function hash(obj, /)>,\n",
-       " 'hex': <function hex(number, /)>,\n",
-       " 'id': <function id(obj, /)>,\n",
-       " 'input': <bound method Kernel.raw_input of <ipykernel.ipkernel.IPythonKernel object at 0x00000238EDC64148>>,\n",
-       " 'isinstance': <function isinstance(obj, class_or_tuple, /)>,\n",
-       " 'issubclass': <function issubclass(cls, class_or_tuple, /)>,\n",
-       " 'iter': <function iter>,\n",
-       " 'len': <function len(obj, /)>,\n",
-       " 'locals': <function locals()>,\n",
-       " 'max': <function max>,\n",
-       " 'min': <function min>,\n",
-       " 'next': <function next>,\n",
-       " 'oct': <function oct(number, /)>,\n",
-       " 'ord': <function ord(c, /)>,\n",
-       " 'pow': <function pow(x, y, z=None, /)>,\n",
-       " 'print': <function print>,\n",
-       " 'repr': <function repr(obj, /)>,\n",
-       " 'round': <function round(number, ndigits=None)>,\n",
-       " 'setattr': <function setattr(obj, name, value, /)>,\n",
-       " 'sorted': <function sorted(iterable, /, *, key=None, reverse=False)>,\n",
-       " 'sum': <function sum(iterable, start=0, /)>,\n",
-       " 'vars': <function vars>,\n",
-       " 'None': None,\n",
-       " 'Ellipsis': Ellipsis,\n",
-       " 'NotImplemented': NotImplemented,\n",
-       " 'False': False,\n",
-       " 'True': True,\n",
-       " 'bool': bool,\n",
-       " 'memoryview': memoryview,\n",
-       " 'bytearray': bytearray,\n",
-       " 'bytes': bytes,\n",
-       " 'classmethod': classmethod,\n",
-       " 'complex': complex,\n",
-       " 'dict': dict,\n",
-       " 'enumerate': enumerate,\n",
-       " 'filter': filter,\n",
-       " 'float': float,\n",
-       " 'frozenset': frozenset,\n",
-       " 'property': property,\n",
-       " 'int': int,\n",
-       " 'list': list,\n",
-       " 'map': map,\n",
-       " 'object': object,\n",
-       " 'range': range,\n",
-       " 'reversed': reversed,\n",
-       " 'set': set,\n",
-       " 'slice': slice,\n",
-       " 'staticmethod': staticmethod,\n",
-       " 'str': str,\n",
-       " 'super': super,\n",
-       " 'tuple': tuple,\n",
-       " 'type': type,\n",
-       " 'zip': zip,\n",
-       " '__debug__': True,\n",
-       " 'BaseException': BaseException,\n",
-       " 'Exception': Exception,\n",
-       " 'TypeError': TypeError,\n",
-       " 'StopAsyncIteration': StopAsyncIteration,\n",
-       " 'StopIteration': StopIteration,\n",
-       " 'GeneratorExit': GeneratorExit,\n",
-       " 'SystemExit': SystemExit,\n",
-       " 'KeyboardInterrupt': KeyboardInterrupt,\n",
-       " 'ImportError': ImportError,\n",
-       " 'ModuleNotFoundError': ModuleNotFoundError,\n",
-       " 'OSError': OSError,\n",
-       " 'EnvironmentError': OSError,\n",
-       " 'IOError': OSError,\n",
-       " 'WindowsError': OSError,\n",
-       " 'EOFError': EOFError,\n",
-       " 'RuntimeError': RuntimeError,\n",
-       " 'RecursionError': RecursionError,\n",
-       " 'NotImplementedError': NotImplementedError,\n",
-       " 'NameError': NameError,\n",
-       " 'UnboundLocalError': UnboundLocalError,\n",
-       " 'AttributeError': AttributeError,\n",
-       " 'SyntaxError': SyntaxError,\n",
-       " 'IndentationError': IndentationError,\n",
-       " 'TabError': TabError,\n",
-       " 'LookupError': LookupError,\n",
-       " 'IndexError': IndexError,\n",
-       " 'KeyError': KeyError,\n",
-       " 'ValueError': ValueError,\n",
-       " 'UnicodeError': UnicodeError,\n",
-       " 'UnicodeEncodeError': UnicodeEncodeError,\n",
-       " 'UnicodeDecodeError': UnicodeDecodeError,\n",
-       " 'UnicodeTranslateError': UnicodeTranslateError,\n",
-       " 'AssertionError': AssertionError,\n",
-       " 'ArithmeticError': ArithmeticError,\n",
-       " 'FloatingPointError': FloatingPointError,\n",
-       " 'OverflowError': OverflowError,\n",
-       " 'ZeroDivisionError': ZeroDivisionError,\n",
-       " 'SystemError': SystemError,\n",
-       " 'ReferenceError': ReferenceError,\n",
-       " 'MemoryError': MemoryError,\n",
-       " 'BufferError': BufferError,\n",
-       " 'Warning': Warning,\n",
-       " 'UserWarning': UserWarning,\n",
-       " 'DeprecationWarning': DeprecationWarning,\n",
-       " 'PendingDeprecationWarning': PendingDeprecationWarning,\n",
-       " 'SyntaxWarning': SyntaxWarning,\n",
-       " 'RuntimeWarning': RuntimeWarning,\n",
-       " 'FutureWarning': FutureWarning,\n",
-       " 'ImportWarning': ImportWarning,\n",
-       " 'UnicodeWarning': UnicodeWarning,\n",
-       " 'BytesWarning': BytesWarning,\n",
-       " 'ResourceWarning': ResourceWarning,\n",
-       " 'ConnectionError': ConnectionError,\n",
-       " 'BlockingIOError': BlockingIOError,\n",
-       " 'BrokenPipeError': BrokenPipeError,\n",
-       " 'ChildProcessError': ChildProcessError,\n",
-       " 'ConnectionAbortedError': ConnectionAbortedError,\n",
-       " 'ConnectionRefusedError': ConnectionRefusedError,\n",
-       " 'ConnectionResetError': ConnectionResetError,\n",
-       " 'FileExistsError': FileExistsError,\n",
-       " 'FileNotFoundError': FileNotFoundError,\n",
-       " 'IsADirectoryError': IsADirectoryError,\n",
-       " 'NotADirectoryError': NotADirectoryError,\n",
-       " 'InterruptedError': InterruptedError,\n",
-       " 'PermissionError': PermissionError,\n",
-       " 'ProcessLookupError': ProcessLookupError,\n",
-       " 'TimeoutError': TimeoutError,\n",
-       " 'open': <function io.open(file, mode='r', buffering=-1, encoding=None, errors=None, newline=None, closefd=True, opener=None)>,\n",
-       " 'copyright': Copyright (c) 2001-2019 Python Software Foundation.\n",
-       " All Rights Reserved.\n",
-       " \n",
-       " Copyright (c) 2000 BeOpen.com.\n",
-       " All Rights Reserved.\n",
-       " \n",
-       " Copyright (c) 1995-2001 Corporation for National Research Initiatives.\n",
-       " All Rights Reserved.\n",
-       " \n",
-       " Copyright (c) 1991-1995 Stichting Mathematisch Centrum, Amsterdam.\n",
-       " All Rights Reserved.,\n",
-       " 'credits':     Thanks to CWI, CNRI, BeOpen.com, Zope Corporation and a cast of thousands\n",
-       "     for supporting Python development.  See www.python.org for more information.,\n",
-       " 'license': Type license() to see the full license text,\n",
-       " 'help': Type help() for interactive help, or help(object) for help about object.,\n",
-       " '__IPYTHON__': True,\n",
-       " 'display': <function IPython.core.display.display(*objs, include=None, exclude=None, metadata=None, transient=None, display_id=None, **kwargs)>,\n",
-       " 'get_ipython': <bound method InteractiveShell.get_ipython of <ipykernel.zmqshell.ZMQInteractiveShell object at 0x00000238EC5354C8>>}"
+       "<_frozen_importlib_external.SourceFileLoader at 0x1e08bf796c8>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "myutil.__builtins__"
+    "myutil.__loader__"
    ]
   },
   {
