--- a/p2-7-iterable-iterator.ipynb
+++ b/p2-7-iterable-iterator.ipynb
@@ -32,11 +32,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2020-03-15T09:45:45.536Z",
+     "iopub.status.busy": "2020-03-15T09:45:45.523Z",
+     "iopub.status.idle": "2020-03-15T09:45:45.568Z",
+     "shell.execute_reply": "2020-03-15T09:45:45.926Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "for i in [1, 2, 3]:\n",
+    "    print(i)"
    ]
   },
   {
@@ -116,29 +134,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "class suqares:\n",
+    "    def __init__(self):\n",
+    "        sefl.base = 0\n",
+    "        \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        self.base += 1\n",
+    "        return self.base ** 2\n",
+    "    next = __next__\n",
+    "    \n",
+    "iter = squares()\n",
+    "iter.next()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "iter.next()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "iter.next()"
    ]
   },
   {
@@ -150,11 +214,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class squares:\n",
+    "    def __init__(self, high):\n",
+    "        self.base = 0\n",
+    "        self.high = high\n",
+    "        \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        self.base += 1\n",
+    "        if self.base > self.high:\n",
+    "            raise StopIteration\n",
+    "        else:\n",
+    "            return self.base * self.base\n",
+    "        \n",
+    "    next = __next__\n",
+    "    \n",
+    "iter = squares(3)"
    ]
   },
   {
@@ -166,11 +247,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "for n in squares(3):\n",
+    "    print(n)"
    ]
   },
   {
@@ -191,11 +283,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class fib:\n",
+    "    def __init__(self):\n",
+    "        self.prev = 0\n",
+    "        self.curr = 1\n",
+    "        \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        self.prev, self.curr = self.curr, self.prev + self.curr\n",
+    "        return self.prev"
    ]
   },
   {
@@ -215,11 +317,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n",
+      "55\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "from itertools import islice\n",
+    "\n",
+    "f = fib()\n",
+    "for i in islice(f, 0, 10):\n",
+    "    print(i)"
    ]
   },
   {
@@ -231,11 +354,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['red', 'orange', 'yellow', 'green', 'blue', 'indigo', 'purple', 'red']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "from itertools import cycle\n",
+    "\n",
+    "colors = cycle([\"red\", \"orange\", \"yellow\", \"green\", \"blue\", \"indigo\", \"purple\"])\n",
+    "list(islice(colors, 0, 8))"
    ]
   },
   {
@@ -261,20 +398,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 8, 13, 21]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def fib():\n",
+    "    prev, curr = 0, 1\n",
+    "    while True:\n",
+    "        yield curr\n",
+    "        prev, curr = curr, prev + curr\n",
+    "        \n",
+    "f = fib()\n",
+    "list(islice(f, 4, 8))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "generator"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "type(fib())"
    ]
   },
   {
@@ -325,11 +491,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 5, 7, 11]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "from math import sqrt\n",
+    "from itertools import islice\n",
+    "\n",
+    "class primes:\n",
+    "    def __init__(self):\n",
+    "        self.next = 2\n",
+    "        \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def is_prime(self, n):\n",
+    "        if n < 2:\n",
+    "            return False\n",
+    "        \n",
+    "        if n in (2, 3):\n",
+    "            return True\n",
+    "        \n",
+    "        for i in range(2, int(sqrt(n) + 1)):\n",
+    "            if n % i == 0:\n",
+    "                return False\n",
+    "            \n",
+    "        return True\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        n = self.next\n",
+    "        while not self.is_prime(n):\n",
+    "            n += 1\n",
+    "            \n",
+    "        self.next = n + 1\n",
+    "        return n\n",
+    "        \n",
+    "list(islice(primes(), 0, 5))"
    ]
   },
   {
@@ -345,16 +553,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'primes' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-27-57db82094728>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     24\u001b[0m         \u001b[0mself\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mislice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprimes\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'primes' object is not iterable"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "from math import sqrt\n",
+    "from itertools import islice\n",
+    "\n",
+    "class primes:\n",
+    "    \n",
+    "    def is_prime(self, n):\n",
+    "        if n < 2:\n",
+    "            return False\n",
+    "        \n",
+    "        if n in (2, 3):\n",
+    "            return True\n",
+    "        \n",
+    "        for i in range(2, int(sqrt() + 1)):\n",
+    "            if n % i == 0:\n",
+    "                return False\n",
+    "            \n",
+    "        return True\n",
+    "    \n",
+    "    def pri(self):\n",
+    "        while is_prime(self):\n",
+    "            yield self\n",
+    "            self += 1\n",
+    "            \n",
+    "        self += 1\n",
+    "        \n",
+    "list(islice(primes(), 0, 5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,6 +624,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "nteract": {
+   "version": "0.22.0"
   }
  },
  "nbformat": 4,
