--- a/p2-1-function-def.ipynb
+++ b/p2-1-function-def.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        " 'yield']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,18 +127,18 @@
        "False"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "keyword.iskeyword(\"name\")"
+    "keyword.iskeyword(\"hello\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -147,13 +147,13 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "keyword.iskeyword(\"True\")"
+    "keyword.iskeyword(\"return\")"
    ]
   },
   {
@@ -192,22 +192,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Program exits. Bye!\n"
+      "Exit\n"
      ]
     }
    ],
    "source": [
-    "def exit_info():\n",
-    "    print(\"Program exits. Bye!\")\n",
-    "\n",
-    "exit_info()"
+    "def _exit_info():\n",
+    "    print(\"Exit\")\n",
+    "    \n",
+    "_exit_info()"
    ]
   },
   {
@@ -242,60 +242,57 @@
     }
    ],
    "source": [
-    "def leap_year(begin, end):\n",
+    "def leap_years(begin, end):\n",
     "    year = begin\n",
     "    while year < end:\n",
-    "        if (year % 4 == 0 and year % 100 != 0) or year % 400 == 0:\n",
+    "        if (year % 4 ==0 and year % 100 != 0) or (year % 400 == 0):\n",
     "            print(year)\n",
-    "        year += 1\n",
-    "        \n",
-    "leap_year(2000, 2020)"
+    "        year += 1            \n",
+    "            \n",
+    "leap_years(2000, 2020)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2056\n",
-      "2060\n",
-      "2064\n",
-      "2068\n",
-      "2072\n",
-      "2076\n",
-      "2080\n",
-      "2084\n",
-      "2088\n",
-      "2092\n",
-      "2096\n"
+      "2000\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-12e2f96d8397>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m \u001b[0m_leap_year\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2000\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2020\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-3-12e2f96d8397>\u001b[0m in \u001b[0;36m_leap_year\u001b[1;34m(begin, end)\u001b[0m\n\u001b[0;32m      6\u001b[0m             \u001b[0myear\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m             \u001b[1;32mif\u001b[0m \u001b[0myear\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;36m4\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0myear\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;36m100\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m                     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0myear\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "def leap_year(begin, end):\n",
+    "def _leap_year(begin, end):\n",
     "    year = begin\n",
     "    while year < end:\n",
-    "        if year % 4 == 0:\n",
-    "            if year % 100 == 0:\n",
-    "                if year % 400 == 0:\n",
-    "                    print(year)\n",
-    "                    year += 1\n",
-    "                else:\n",
-    "                    year += 1\n",
-    "                    pass\n",
-    "            else:\n",
-    "                print(year)\n",
-    "                year += 1\n",
-    "        else:\n",
+    "        if year % 400 == 0:\n",
+    "            print(year)\n",
     "            year += 1\n",
-    "            pass\n",
-    "            \n",
-    "\n",
-    "leap_year(2054, 2099)"
+    "        else:\n",
+    "            if year % 4 == 0:\n",
+    "                if year % 100 != 0:\n",
+    "                    print(year)\n",
+    "                year += 1\n",
+    "            year =+ 1\n",
+    "                \n",
+    "                \n",
+    "_leap_year(2000, 2020)"
    ]
   },
   {
@@ -325,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +331,7 @@
        "False"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,25 +358,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 2\n"
+      "(5, 31)\n"
      ]
     }
    ],
    "source": [
     "def idiv(a, b):\n",
-    "    quotient = a // b\n",
-    "    remainder = a % b\n",
-    "    return quotient, remainder\n",
+    "    q = a // b\n",
+    "    r = a % b\n",
+    "    return q, r\n",
     "\n",
-    "q, r = idiv(18, 4)\n",
-    "print(q, r)"
+    "print(idiv(456, 85))"
    ]
   },
   {
@@ -405,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +417,7 @@
     "def increase_one(n):\n",
     "    n += 1\n",
     "    return n\n",
-    "\n",
+    "    \n",
     "n = 1\n",
     "print(increase_one(n))\n",
     "print(n)"
@@ -481,46 +477,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "def greeting(name, msg = \"Hi\"):\n",
-    "    print(f\"{msg}, {name}!\")"
+    "    return f\"{msg}, {name}!\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi, neo!\n"
+      "Hi, Neo!\n"
      ]
     }
    ],
    "source": [
-    "greeting(\"neo\")"
+    "print(greeting(\"Neo\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Good afternoon, Neo!\n"
+      "Good morning, Neo!\n"
      ]
     }
    ],
    "source": [
-    "greeting(\"Neo\", \"Good afternoon\")"
+    "print(greeting(\"Neo\", \"Good morning\"))"
    ]
   },
   {
@@ -548,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -595,19 +591,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Good afternoon, Neo.\n"
+      "Good morning, Neo.\n"
      ]
     }
    ],
    "source": [
-    "greeting(\"Neo\", punc = \".\", msg = \"Good afternoon\")"
+    "greeting(\"Neo\", punc = \".\", msg = \"Good morning\")"
    ]
   },
   {
@@ -628,67 +624,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def say_hi(*names):\n",
+    "def greeting(*names):\n",
     "    for name in names:\n",
-    "        print(\"Hi, \", name, \"!\")"
+    "        print(f\"Hi, {name}!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi,  Neo !\n"
+      "Hi, Neo!\n"
      ]
     }
    ],
    "source": [
-    "say_hi(\"Neo\")"
+    "greeting(\"Neo\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi,  Neo\n",
-      "Hi,  Tracy\n"
+      "Hi, Neo!\n",
+      "Hi, Tina!\n"
      ]
     }
    ],
    "source": [
-    "say_hi(\"Neo\", \"Tracy\")"
+    "greeting(\"Neo\", \"Tina\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi,  Neo\n",
-      "Hi,  Tracy\n",
-      "Hi,  Bella\n"
+      "Hi, Neo!\n",
+      "Hi, Tina!\n",
+      "Hi, Zoe!\n"
      ]
     }
    ],
    "source": [
-    "say_hi(\"Neo\", \"Tracy\", \"Bella\")"
+    "greeting(\"Neo\", \"Tina\", \"Zoe\")"
    ]
   },
   {
@@ -721,18 +717,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def say_hi(*names, msg = \"Hi\", punc = \"!\"):\n",
+    "def greeting(*names, msg = \"Hi\", punc = \"!\"):\n",
     "    for name in names:\n",
     "        print(f\"{msg}, {name}{punc}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -740,12 +736,12 @@
      "output_type": "stream",
      "text": [
       "Hi, Neo.\n",
-      "Hi, Tracy.\n"
+      "Hi, Tina.\n"
      ]
     }
    ],
    "source": [
-    "say_hi(\"Neo\", \"Tracy\", punc = \".\")"
+    "greeting(\"Neo\", \"Tina\", punc = \".\")"
    ]
   },
   {
