--- a/p2-2-docstrings.ipynb
+++ b/p2-2-docstrings.ipynb
@@ -50,19 +50,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from math import sqrt\n",
-    "\n",
     "def is_prime(n):\n",
-    "    \"\"\"Return a boolean value based upon whether the argument n is a prime number.\"\"\"\n",
-    "    if n < 2:\n",
+    "    \"\"\"Return bool value if it's a prime number. Prime number is geater than 1 that is not a product of 2 smaller natural number.\"\"\"\n",
+    "    if n <= 1:\n",
     "        return False\n",
-    "    \n",
-    "    if n in [2, 3]:\n",
+    "        \n",
+    "    if n in (2, 3):\n",
     "        return True\n",
-    "    \n",
-    "    for i in range(2, int(sqrt(n)) + 1):\n",
+    "        \n",
+    "    for i in range(2, n):\n",
     "        if n % i == 0:\n",
     "            return False\n",
+    "        \n",
     "    return True"
    ]
   },
@@ -74,7 +73,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
      "execution_count": 2,
@@ -83,27 +82,7 @@
     }
    ],
    "source": [
-    "is_prime(31)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "is_prime(21)"
+    "is_prime(321)"
    ]
   },
   {
@@ -112,19 +91,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function is_prime in module __main__:\n",
-      "\n",
-      "is_prime(n)\n",
-      "    Return a boolean value based upon whether the argument n is a prime number.\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "help(is_prime)"
+    "is_prime(29)"
    ]
   },
   {
@@ -135,7 +113,7 @@
     {
      "data": {
       "text/plain": [
-       "6"
+       "False"
       ]
      },
      "execution_count": 4,
@@ -144,47 +122,28 @@
     }
    ],
    "source": [
-    "int(6.5)"
+    "is_prime(12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function is_prime in module __main__:\n",
+      "\n",
+      "is_prime(n)\n",
+      "    Return bool value if it's a prime number. Prime number is geater than 1 that is not a product of 2 smaller natural number.\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "int(5.9)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "int(2.1)"
+    "help(is_prime)"
    ]
   },
   {
@@ -196,16 +155,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Return a boolean value based upon whether the argument n is a prime number.'"
+       "\"Return bool value if it's a prime number. Prime number is geater than 1 that is not a product of 2 smaller natural number.\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
